test/cli/issue-15350-message-expression-error-exceptions/invalid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-pod-no-annotations
  namespace: default
spec:
  containers:
  - name: nginx
    image: nginx:latest
