test/cli/issue-15350-message-expression-error-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
exceptions:
- exception.yaml
kind: Test
metadata:
  name: issue-15350-repro
policies:
- policy.yaml
resources:
- invalid-pod.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: require-department-annotation
  resources:
  - invalid-pod-no-annotations
  result: error
